# SecureIncident

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Specyfikacja_Secure_Incident.md  bandit.yaml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  init_db.bat  init_db.sh  pyproject.toml  struktura_backend.txt
.github/workflows/: backend-ci.yml  backend-qa.yml  backend-tests.yml  backend.yml  ci-checks.yml  frontend-ci.yml  frontend-qa.yml  frontend.yml
.maister/docs/: INDEX.md
.maister/docs/project/: architecture.md  roadmap.md  tech-stack.md  vision.md
.maister/docs/standards/backend/: api.md  domain.md  logging.md  migrations.md  models.md  queries.md  security.md
.maister/docs/standards/frontend/: accessibility.md  components.md  css.md  responsive.md
.maister/docs/standards/global/: coding-style.md  commenting.md  conventions.md  error-handling.md  minimal-implementation.md  tooling.md  validation.md
.maister/docs/standards/infrastructure/: ci-cd.md
.maister/docs/standards/testing/: test-writing.md
Frontend/: Dockerfile  index.html  nginx.conf  nginx.local.conf  package-lock.json  package.json  tailwindconfig.js  tsconfig.app.json  tsconfig.node.json  typedoc.json
Frontend/src/: Api.ts  App.css  App.tsx  SIAppRoot.tsx  SIPageNotFound.tsx  SIStartPage.tsx  SIToolbar.tsx  index.css  main.tsx
Frontend/src/account/: SIAccountPage.tsx  SINotificationPage.tsx  forms.ts  index.ts  routing.ts
Frontend/src/api/: README.md  runtime.ts  tsconfig.json
Frontend/src/api/apis/: AuthApi.ts  CategoriesApi.ts  FeedbackApi.ts  IncidentsApi.ts  InvitationsApi.ts  OrganizationApi.ts  ProfilesApi.ts  ProjectsApi.ts  RolesApi.ts  UsersApi.ts  index.ts
Frontend/src/api/models/: AddCommentRequest.ts  AddHelperRequest.ts  AddProjectMemberRequest.ts  AssignRoleRequest.ts  CategoryListResponse.ts  CategoryResponse.ts  ChangePasswordRequest.ts  CommentListResponse.ts  CommentResponse.ts  CreateCategoryRequest.ts  CreateIncidentRequest.ts  CreateInviteRequest.ts  CreateOrgInviteRequest.ts  CreateOrganizationRequest.ts  CreateProjectInviteRequest.ts  CreateProjectRequest.ts  CreateRoleRequest.ts  CreatedIdResponse.ts  CurrentUserResponse.ts  ErrorResponse.ts  FeedbackRequest.ts  HelperResponse.ts  IncidentDetailsResponse.ts  IncidentListResponse.ts  IncidentLogEntry.ts  IncidentLogListResponse.ts  IncidentLogType.ts  IncidentPriority.ts  IncidentStatus.ts  IncidentSummary.ts  (+31 more)
Frontend/src/auth/: Auth.ts  User.ts  middleware.ts
Frontend/src/components/: Background.tsx  Footer.tsx  LoadingMessage.tsx  Popup.tsx  icons.tsx
Frontend/src/dashboard/: DashboardSidebar.tsx  SIDashboard.tsx  SIIncident.tsx  SIOrganization.tsx  SIProject.tsx  forms.ts  index.ts  routing.ts
Frontend/src/data/: Api.ts  Auth.ts  auth.ts  context.ts  cookies.ts  profile.ts  project.ts
Frontend/src/login/: SIForgotPassword.tsx  SILoginPage.tsx  SIRegisterPage.tsx  SIResetPassword.tsx  forms.ts  icons.tsx  index.ts  routing.ts  validation.ts
Frontend/src/misc/: SIPageNotFound.tsx  SIStartPage.tsx  SIToolbar.tsx  index.ts  router_helpers.ts
Frontend/src/ui/: SIDashboard.tsx  SIForgotPassword.tsx  SILoginPage.tsx  SIPageNotFound.tsx  SIRegisterPage.tsx  SIStartPage.tsx  SIToolbar.tsx
Frontend/tests/: account_routing.test.ts  auth.test.ts  dashboard_routing.test.ts  login_routing.test.ts
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pytest.ini  requirements-alembic.txt  requirements.txt  run_API.txt  struktura_backend.txt  test_db.py  testy_Dominik.md
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  2026_05_30_1318-8557b1f01d8a_consolidate_invitation_model.py  2026_06_14_1429-9ca2bc071d3d_add_profile_fields_to_users.py  2026_06_16_1325-9f3548d1fdf0_added_invalidation_token.py  2026_06_18_0153-cddb7a16613a_add_incident_helpers_table.py  2026_06_26_1632-c439c909863c_refresh_token_rotation_tables.py
backend/api/: testyAPI.md
backend/api/dependencies/: auth.py  db.py
backend/api/routes/: auth.py  categories.py  feedback.py  incidents.py  invitations.py  kolejnosc.txt  organization.py  profiles.py  projects.py  roles.py  users.py
backend/api/schemas/: kolejnosc.txt
backend/core/: config.py  security.py
backend/db/: session.py
backend/db/models/: __init__.py  category.py  comment.py  db_models_changes.md  incident.py  incident_helper.py  incident_log.py  organization.py  organization_invite.py  password_reset_token.py  project.py  refresh_token.py  revoked_family.py  revoked_token.py  role.py  user.py  user_project.py
backend/db/repositories/: __init__.py  category_repo.py  incident_repo.py  invite_repo.py  organization_repo.py  project_repo.py  refresh_token_repo.py  revoked_family_repo.py  revoked_token_repo.py  user_repo.py
backend/middleware/: logging_middleware.py
backend/services/: auth_service.py  category_service.py  email_service.py  incident_service.py  invitation_service.py  organization_service.py  profile_service.py  project_service.py  role_service.py
backend/templates/emails/: base.html  password_reset.html
backend/tests/: conftest.py  test_auth_change_password.py  test_auth_login.py  test_auth_logout.py  test_auth_me.py  test_auth_password_reset.py  test_auth_refresh.py  test_auth_register.py  test_categories.py  test_comments.py  test_email_service.py  test_helpers.py  test_incident_logs.py  test_incidents.py  test_incidents_notifications.py  test_invitations.py  test_organization_invites.py  test_organizations.py  test_profiles.py  test_projects.py  test_refresh_token_repo.py  test_roles.py  test_schema_validation.py  test_security_tokens.py
docs/: backend.md  bandit.txt  documentation.md  dokumentacja.md  frontend.md  main.py  pip-audit.txt  qa.md  tests.md  vulture.txt
docs/api/: openapi-core.json  openapi-extended.json
docs/db/: QuickDBD-export.sql
docs/guides/: README.md  ci-cd.md  pre-commit.md  pull-requests.md  running-the-app.md  testing.md
docs/templates/: template.tex  text.mako
(+33 files in other folders)
