[project]
name = "secureincident"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
    "aiosmtplib>=5.1.1",
    "bandit>=1.9.4",
    "python-json-logger>=4.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "pip-audit>=2.10.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "vulture>=2.16",
]
[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"backend/main.py" = ["E402"]
"backend/alembic/env.py" = ["E402"]
"backend/db/models/*.py" = ["F821"]
"backend/tests/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.vulture]
min_confidence = 80
paths = ["backend"]

[tool.bandit]
exclude_dirs = ["backend/tests"]
