[project]
name = "secureincident"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "starlette>=1.3.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
    "aiosmtplib>=5.1.1",
    "bandit>=1.9.4",
    "python-json-logger>=4.1.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.19",
    "vulture>=2.16",
]
[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# E402: route modules are imported at the bottom of the file and each registered
# via include_router() immediately after, so they attach only once the app, CORS,
# middleware and exception handlers are fully configured. The imports are
# deliberately not in the top-of-file block.
"backend/main.py" = ["E402"]
# E402: sys.path.insert() must run before `from db import ...` — the local `db`
# package is not importable until the backend dir is added to sys.path. This is
# the standard Alembic env.py bootstrap and the imports cannot move to the top.
"backend/alembic/env.py" = ["E402"]
# F821: models annotate relationships as Mapped[User], Mapped[Project], etc.
# without importing those sibling classes (importing them would create circular
# imports between model modules). SQLAlchemy resolves the relationship at runtime
# from the string class name (e.g. "User") via its registry, so the bare name is
# undefined to static analysis and Ruff reports it as F821.
"backend/db/models/*.py" = ["F821"]
# S101: the flake8-bandit "assert used" rule — test code legitimately relies on
# bare `assert`. NOTE: `S` is not in the `select` set above, so this currently has
# no effect; it is kept defensively in case the S family is enabled later.
"backend/tests/*.py" = ["S101"]
# E711/E712: SQLAlchemy column comparisons require `== None` / `== True` to build
# SQL IS NULL / = true clauses; `is None` would short-circuit to a Python bool and
# silently produce a wrong query instead of a column expression.
"backend/db/repositories/*.py" = ["E711", "E712"]

[tool.ruff.format]
quote-style = "double"

[tool.vulture]
min_confidence = 80
paths = ["backend"]
# Tests are excluded: fixtures, parametrized args and helpers look unused to a
# static dead-code scanner (they are invoked by pytest, not by direct callers).
exclude = ["*/tests/*"]

[tool.bandit]
# Tests are excluded from SAST: they intentionally use patterns bandit flags as
# risky (bare `assert` -> B101, hardcoded throwaway passwords/secrets -> B105/B106)
# which are safe and expected in test code, not in shipped backend code.
exclude_dirs = ["backend/tests"]
